infra/02-uat/k8s/email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
      - name: email-service
        image: id.dkr.ecr.us-east-1.amazonaws.com/email-service:1.1.5-20250502
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-service
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
