infra/02-uat/k8s/list-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: list-service
  template:
    metadata:
      labels:
        app: list-service
    spec:
      containers:
      - name: list-service
        image: id.dkr.ecr.us-east-1.amazonaws.com/list-service:1.1.5-20250502
        ports:
        - containerPort: 8001
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: list-service
spec:
  selector:
    app: list-service
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
